[package]
name = "injector"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
argh = "0.1.5"
winapi = { version = "0.3.9", features = [
    "minwindef",
    "minwinbase",
    "winbase",
    "winnt",
    "handleapi",
    "errhandlingapi",
    "processthreadsapi",
    "memoryapi",
    "libloaderapi",
    "synchapi"
] }
widestring = "0.4.3"
